[package]
name = "geirtris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1
debug = false

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.12"
image = "0.24"
hex_color = "3"
